--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
                     <i class="fas fa-shopping-cart"></i> USA Market Valera
                 </a>
                 <a href="https://www.andrestoteles.com" target="_blank">
-                    <i class="fa-solid fa-play"></i></i> Andrestoteles
+                    <i class="fa-solid fa-star"></i></i> Andrestoteles
                 <a href="https://www.autopizzas.net" target="_blank">
                     <i class="fas fa-pizza-slice"></i> Auto Pizzas
                 </a>
@@ -270,9 +270,6 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
                 </a>
                 <a href="http://t.me/andresvasquez" target="_blank">
                     <i class="fab fa-telegram"></i> Telegram
-                </a>
-                <a href="https://www.andrestotles.com" target="_blank">
-                    <i class="fa-solid fa-star"></i> Andrestoteles
                 </a>
             </div>
         </div>
