--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Andrés Vásquez — Enlaces</title>
+  <title>Andrés Vásquez | Enlaces</title>
   <meta name="description" content="Proyectos, música, enlaces y contacto de Andrés Vásquez (Andrestoteles).">
   <link rel="canonical" href="https://vasquezandres.net/">
 
