--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
           Pero no solo soy técnico. También soy <strong>Artista</strong>. Bajo el nombre <strong>Andrestoteles</strong>, escribo y produzco canciones basadas en vivencias reales, con un enfoque de fe, superación y propósito. Además, compongo <strong>jingles comerciales</strong> que conectan con la gente porque tienen alma, no solo ritmo.<br><br>
           Mi lema es: <em>“Andrés, no hay nada que no puedas hacer en este mundo”</em>. Y bajo esa convicción, sigo adelante, con los valores que me enseñó mi papá: hacer lo correcto y tratar a los demás como quiero que me traten a mí.
         `,
-        footer_text: '© 2025 Andrés Vásquez.'
+        footer_text: '© Andrés Vásquez.'
       },
       en: {
         hero_name: 'Andrés Vásquez',
@@ -562,7 +562,7 @@
           But I’m not only a technician. I’m also an <strong>Artist</strong>. Under the name <strong>Andrestoteles</strong>, I write and produce music based on real-life experiences with a focus on faith, resilience, and purpose. I also compose <strong>commercial jingles</strong> that connect with people because they have soul —not just rhythm.<br><br>
           My motto is: <em>“Andrés, there’s nothing you can’t do in this world.”</em> And with that mindset, I keep moving forward, guided by the values my father taught me: do the right thing and treat others the way you want to be treated.
         `,
-        footer_text: '© 2025 Andrés Vásquez.'
+        footer_text: '© Andrés Vásquez.'
       }
     };
 
