--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <i class="fa-solid fa-chevron-down chevron"></i>
       </button>
       <div class="pill-body">
-        <a class="subpill" href="https://www.solutechpanama.com" target="_blank" rel="noopener">
+        <a class="subpill" href="https://www.solutech.com.pa" target="_blank" rel="noopener">
           <i class="fa-solid fa-computer"></i> <span>Solutech Panamá</span>
         </a>
         <a class="subpill" href="https://www.market.com.ve" target="_blank" rel="noopener">
