--- a/index.html
+++ b/index.html
@@ -187,15 +187,24 @@
         <i class="fa-solid fa-chevron-down chevron"></i>
       </button>
       <div class="pill-body">
-        <a class="subpill" href="https://www.solutech.com.pa" target="_blank" rel="noopener">
+        <a class="subpill" href="https://solutech.com.pa" target="_blank" rel="noopener">
           <i class="fa-solid fa-computer"></i> <span>Solutech Panamá</span>
         </a>
+        <a class="subpill" href="https://solutechcloud.com" target="_blank" rel="noopener">
+          <i class="fa-solid fa-computer"></i> <span>Solutech Cloud</span>
+        </a>        
         <a class="subpill" href="https://www.market.com.ve" target="_blank" rel="noopener">
           <i class="fa-solid fa-store"></i> <span>USA Market Valera</span>
         </a>
-        <a class="subpill" href="https://www.andrestoteles.com" target="_blank" rel="noopener">
+        <a class="subpill" href="https://andrestoteles.com" target="_blank" rel="noopener">
           <i class="fa-solid fa-star"></i> <span>Andrestoteles</span>
         </a>
+        <a class="subpill" href="https://mcafee.com.pa" target="_blank" rel="noopener">
+          <i class="fa-solid fa-computer"></i> <span>McAfee Panamá</span>
+        </a>
+        <a class="subpill" href="https://kasperskypanama.com" target="_blank" rel="noopener">
+          <i class="fa-solid fa-computer"></i> <span>Kaspersky Panamá</span>
+        </a>                
         <a class="subpill" href="https://t.me/andresvasquez" target="_blank" rel="noopener">
           <i class="fa-brands fa-telegram"></i> <span>Telegram</span>
         </a>
